Fix jumbotron elements spacing for any device smaller than desktop screen. Instead of only mobile screens.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -101,7 +101,8 @@ body {
   vertical-align: middle;
 }
 
-@media (max-width: 576px) {
+// fix spacing for screens up to desktop breakpoint
+@media (max-width: 992px) {
   .jumbotron {
     padding-top: 0;
   }
